--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,9 +1,10 @@
+/* base stylesheet */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-html
 body {
     height: fit-content;
     border: 2px solid red;
